# GMAO-Project

./: .gitignore  README.md
backend/: .env.example  Dockerfile  Makefile  Readme.md  alembic.ini  check_db.py  docker-compose.yml  generate_token.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20251204_1121_8d7cd7c158ae_add_amdec_and_training_tables.py
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py  security.py
backend/app/ml_models/: best_model_config.json  ensemble_model.pkl  model_metadata.json  preprocessing_pipeline.pkl  svr_model.pkl  xgb_model.pkl
backend/app/routers/: __init__.py  amdec.py  chat.py  copilot.py  equipment.py  formation_priority.py  guidance.py  import_export.py  interventions.py  knowledge_base.py  kpi.py  ocr.py  prediction.py  rag.py  spare_parts.py  technicians.py  training.py
backend/app/services/: __init__.py  amdec_service.py  copilot_service.py  export_service.py  formation_priority_service.py  guidance_service.py  import_service.py  knowledge_base_service.py  kpi_service.py  ocr_service.py  pdf_generator.py  prediction_service.py  training_service.py
backend/app/services/rag/: __init__.py  cache_service.py  config.py  document_processor.py  embedding_service.py  llm_service.py  rag_service.py  vector_store.py
backend/app/services/rag/llm/: base.py  (+4 more)
backend/data/guidance/: page_mappings.json
backend/data/prompts/: prompt.json
backend/scripts/: seed_forecast_data.py  train_ml_models.py
backend/tests/: debug_db.py  diagnose_rag.py  test_equipment_features.py
(+199 files in other folders)
